// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResourceLoader > snapshots > should NOT show error warning for silent (4xx) resource errors 1`] = `<!--v-if-->`;

exports[`ResourceLoader > snapshots > should match snapshot IF UI component is not resolved 1`] = `
<cwauialertwarning-stub>
  <p>
    The component 'TestComponentMock' for resource 'testIri' cannot be resolved
  </p>
</cwauialertwarning-stub>
`;

exports[`ResourceLoader > snapshots > should match snapshot IF component is resolved from props 1`] = `
<dummycomponent-stub
  iri="testIri"
/>
`;

exports[`ResourceLoader > snapshots > should match snapshot IF global component name is resolved 1`] = `
<globalcomponent-stub
  iri="testIri"
/>
`;

exports[`ResourceLoader > snapshots > should match snapshot IF resource data is not resolved 1`] = `<!--v-if-->`;

exports[`ResourceLoader > snapshots > should match snapshot IF resource does not exist after loading 1`] = `
<cwauialertwarning-stub>
  <p>
    Resource 'testIri' has not been requested
  </p>
</cwauialertwarning-stub>
`;

exports[`ResourceLoader > snapshots > should match snapshot IF resource is loading 1`] = `
<div>
  <spinner-stub
    show="true"
  />
</div>
`;

exports[`ResourceLoader > snapshots > should show error warning for non-silent (5xx) resource errors 1`] = `
<cwauialertwarning-stub>
  <p>
    Error loading resource 'testIri': 500 Internal Server Error
  </p>
</cwauialertwarning-stub>
`;
